更新插件信息

--- a/TencentVoiceForUnreal.uplugin
+++ b/TencentVoiceForUnreal.uplugin
@@ -1,23 +1,24 @@
 {
-	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
-	"FriendlyName": "TencentVoiceForUnreal",
-	"Description": "",
-	"Category": "Other",
-	"CreatedBy": "",
-	"CreatedByURL": "",
-	"DocsURL": "",
-	"MarketplaceURL": "",
-	"SupportURL": "",
-	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"Installed": false,
-	"Modules": [
-		{
-			"Name": "TencentVoiceForUnreal",
-			"Type": "Developer",
-			"LoadingPhase": "Default"
-		}
-	]
+  "FileVersion": 3,
+  "Version": 1,
+  "VersionName": "1.0",
+  "FriendlyName": "TencentVoiceForUnreal",
+  "Description": "Voice plug-in from Tencent voice SDK",
+  "Category": "Other",
+  "CreatedBy": "ThePupilOfTheOcean",
+  "CreatedByURL": "",
+  "DocsURL": "",
+  "MarketplaceURL": "",
+  "SupportURL": "",
+  "EnabledByDefault": true,
+  "CanContainContent": true,
+  "IsBetaVersion": false,
+  "Installed": false,
+  "Modules": [
+    {
+      "Name": "TencentVoiceForUnreal",
+      "Type": "Runtime",
+      "LoadingPhase": "PreDefault"
+    }
+  ]
 }
