--- a/TencentVoiceForUnreal.uplugin
+++ b/TencentVoiceForUnreal.uplugin
@@ -18,7 +18,7 @@
     {
       "Name": "TencentVoiceForUnreal",
       "Type": "Runtime",
-      "LoadingPhase": "Default"
+      "LoadingPhase": "PreDefault"
     }
   ]
 }
